// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rollup > find regexp 1`] = `
"// main.js
import 'node:process';

const platform = null;

console.info('hello null', platform);
console.info(dEV);

/** COMMENT_FLAG */
function x() {}

export { platform, x };
"
`;

exports[`rollup > find string 1`] = `
"// main.js
import 'node:process';

const platform = "darwin";

console.log('hello "darwin"', platform);
console.log(DEV);

/** COMMENT_FLAG */
function x() {}

export { platform, x };
"
`;
